--- a/views/contacts/show.ejs
+++ b/views/contacts/show.ejs
@@ -6,7 +6,7 @@
 <body>
     <%- include('../partials/nav') %>
 
-    <div class="contact contact=show">
+    <div class="contact contact-show">
         <h2>Show</h2>
         <div>
             <h3><%= contact.name%></h3>
